--- a/frontend portfolio/index.html
+++ b/frontend portfolio/index.html
@@ -186,7 +186,7 @@
                                 <p class="text-muted">Currently i am in the 8th semester pursuing B.E Degree from the chandighar university</p>
                                 <div class="d-flex justify-content-center fs-2 gap-4">
                                     <a class="text-gradient" href="#!"><i class="bi bi-twitter"></i></a>
-                                    <a class="text-gradient" href="#!"><i class="bi bi-linkedin"></i></a>
+                                    <a class="text-gradient" href="https://www.linkedin.com/in/adityaraj85/"><i class="bi bi-linkedin"></i></a>
                                     <a class="text-gradient" href="#!"><i class="bi bi-github"></i></a>
                                 </div>
                             </div>
